Setup dual database environment: SQLite (dev) + PostgreSQL (prod)
- Add schema.dev.prisma for SQLite development
- Configure auth.ts to auto-detect environment
- Add setup scripts and npm commands for database switching
- Update .env configuration for development (SQLite)
- Add Vercel production setup documentation
- Remove resources/ folder from Git tracking
- Prepare PostgreSQL migration for production deployment

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # Database
-DATABASE_URL="file:./dev.db"
+# For development (SQLite)
+# DATABASE_URL="file:./dev.db"
+# For production (PostgreSQL)
+DATABASE_URL="postgresql://username:password@host:port/database"
 
 # UploadThing
 # docs : https://uploadthing.com/
