--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "db:generate": "prisma generate",
+    "db:dev": "cp prisma/schema.dev.prisma prisma/schema.prisma && prisma db push && prisma generate",
+    "db:prod": "cp prisma/schema.prisma.backup prisma/schema.prisma 2>/dev/null || true && prisma db push && prisma generate",
+    "setup:dev": "./setup-db.sh dev",
+    "setup:prod": "./setup-db.sh prod",
     "db:test": "node scripts/test-db.js",
     "email:test": "node scripts/test-email-config.js",
     "email:test-send": "node scripts/test-email-system.js"
@@ -52,6 +56,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "@uploadthing/react": "^6.2.2",
+    "@vercel/postgres": "^0.10.0",
     "autoprefixer": "10.4.15",
     "bcryptjs": "^3.0.2",
     "better-auth": "^1.3.5-beta.6",
